# sonic-contracts-agent

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
sonic-ai-client/: index.js  package-lock.json  package.json
src/: error.rs  instruction.rs  lib.rs  mod.rs  processor.rs  state.rs
tests/: ai_infra_tests.rs
